<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.orcid</groupId>
	<artifactId>orcid-model</artifactId>
	<version>4.0.0</version>

	<name>ORCID - Model</name>
	<description>Container for all classes that will be used to marshal and unmarshal XML/JSON from the API</description>
	<url>http://github.com/ORCID/orcid-model</url>

	<properties>
		<main.basedir>${project.basedir}</main.basedir>
		<swagger.version>2.1.1</swagger.version>
		<jena.version>4.4.0</jena.version>
		<spring.version>6.0.23</spring.version>
		<jackson.version>2.15.4</jackson.version>
	</properties>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>George Nash</name>
			<email>g.nash@orcid.org</email>
			<organization>ORCID</organization>
			<organizationUrl>https://orcid.org</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/ORCID/orcid-model.git</connection>
		<developerConnection>scm:git:ssh://github.com:ORCID/orcid-model.git</developerConnection>
		<url>http://github.com/ORCID/orcid-model/tree/master</url>
	</scm>

	<profiles>
		<profile>
			<id>maven-central</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<inherited>true</inherited>
						<configuration>
							<source>21</source>
							<target>21</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
               		 						<gpgArguments>
                    								<arg>--pinentry-mode</arg>
                    								<arg>loopback</arg>
                							</gpgArguments>
            							</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


	<build>
		<plugins>
			<plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-enforcer-plugin</artifactId>
	        <version>3.0.0-M3</version>
	        <executions>
	            <execution>
	            <id>enforce-versions</id>
	            <goals>
	                <goal>enforce</goal>
	            </goals>
	            <configuration>
	                <rules>
	                    <requireMavenVersion>
	                        <version>3.6.3</version>
	                    </requireMavenVersion>
	                    <requireJavaVersion>
	                        <version>21</version>
	                    </requireJavaVersion>
	                </rules>
	            </configuration>
	            </execution>
	        </executions>
	        </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<inherited>true</inherited>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.8.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
					<centralSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots/</centralSnapshotsUrl>
					<autoPublish>true</autoPublish>
					<waitUntil>uploaded</waitUntil>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.openrewrite.maven</groupId>
		        <artifactId>rewrite-maven-plugin</artifactId>
	        <version>5.43.0</version>
	        <configuration>
	            <activeRecipes>
	            	<recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
	            	<recipe>org.openrewrite.java.migrate.jakarta.JavaxMigrationToJakarta</recipe>
	            	<recipe>org.openrewrite.java.spring.framework.UpgradeSpringFramework_6_0</recipe>
	            </activeRecipes>
	        </configuration>
	        <dependencies>
	            <dependency>
	                <groupId>org.openrewrite.recipe</groupId>
	                <artifactId>rewrite-migrate-java</artifactId>
	                <version>2.20.0</version>
	            </dependency>
	            <dependency>
	                <groupId>org.openrewrite.recipe</groupId>
	                <artifactId>rewrite-spring</artifactId>
	                <version>5.18.0</version>
	            </dependency>
		        </dependencies>
		    </plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.2</version>
		</dependency>

		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-jaxrs2</artifactId>
			<version>${swagger.version}</version>
		</dependency>
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>${swagger.version}</version>
		</dependency>
		 
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>
		
	    <!-- Jackson -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>${jackson.version}</version>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.dataformat</groupId>
		    <artifactId>jackson-dataformat-csv</artifactId>
		    <version>2.5.1</version>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-annotations</artifactId>
		    <version>${jackson.version}</version>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		    <version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>3.0.2</version>
			</dependency>
		<dependency>
			<groupId>org.codehaus.jettison</groupId>
			<artifactId>jettison</artifactId>
			<version>1.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
			<version>5.3.1</version>
		</dependency>
		<dependency>
			<groupId>jakarta.ws.rs</groupId>
			<artifactId>jakarta.ws.rs-api</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>1.3.5</version>
        </dependency>

		<!-- test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>xmlunit</groupId>
			<artifactId>xmlunit</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
	    <dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>32.0.0-jre</version>
		</dependency>
	</dependencies>
</project>
